修改国内镜像源,加入aspectj,bytebuddy,启用Java21预览功能